--- a/style.css
+++ b/style.css
@@ -117,9 +117,8 @@ header{
     color: #3E8180;
 }
 .build{
-    font-family: "Airbnb Cereal App";
+    font-family: "Airbnb Cereal App300";
     font-size: 26px;
-    font-size: normal;
     line-height: 39px;
     letter-spacing: 0.0041em;
     text-align: center;    
